--- a/Assignment 5/Image_Classification_using_pytorch.ipynb
+++ b/Assignment 5/Image_Classification_using_pytorch.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rainidhi12/APML-Assignments/blob/main/Assignment%205/Image_Classification_using_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Assignment 5(i) using Pytorch\n",
         "# Nidhi\n",
@@ -963,7 +973,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPB3LrWT0YURzXtSMjsKP7+",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
